@@ -9,7 +9,7 @@
   "depends": [
     "PDF::Lite",
     "PDF::Content",
-    "Font::FreeType:ver<0.3.5+>",
+    "Font::FreeType:ver<0.3.6+>",
     "PDF",
     "Native::Packing"
   ],
@@ -24,9 +24,7 @@
     "PDF::Font::Loader::Enc::CMap": "lib/PDF/Font/Loader/Enc/CMap.rakumod",
     "PDF::Font::Loader::Enc::Glyphic": "lib/PDF/Font/Loader/Enc/Glyphic.rakumod",
     "PDF::Font::Loader::Enc::Identity8": "lib/PDF/Font/Loader/Enc/Identity8.rakumod",
-    "PDF::Font::Loader::Enc::Identity8::Compact": "lib/PDF/Font/Loader/Enc/Identity8/Compact.rakumod",
     "PDF::Font::Loader::Enc::Identity16": "lib/PDF/Font/Loader/Enc/Identity16.rakumod",
-    "PDF::Font::Loader::Enc::Identity16::Compact": "lib/PDF/Font/Loader/Enc/Identity16/Compact.rakumod",
     "PDF::Font::Loader::Enc::Type1": "lib/PDF/Font/Loader/Enc/Type1.rakumod",
     "PDF::Font::Loader::FreeType": "lib/PDF/Font/Loader/FreeType.rakumod",
     "PDF::Font::Loader::Type1": "lib/PDF/Font/Loader/Type1.rakumod",
