@@ -1,6 +1,6 @@
 use v6;
 use Test;
-plan 5;
+plan 2;
 use PDF::Lite;
 use PDF::Content;
 use PDF::Font::Loader;
@@ -13,19 +13,11 @@ my $height = 80;
 my $x = 110;
 
 my $font = PDF::Font::Loader.load-font: :file<t/fonts/DejaVuSans.ttf>;
-my $font1 = PDF::Font::Loader.load-font: :file<t/fonts/DejaVuSans.ttf>, :!subset;
-
-todo "font subsetting - nyi";
-like $font.font-name, /^<[A..Z]>**6'+DejaVuSans'$/, 'subsetted font name';
-unlike $font1.font-name, /^<[A..Z]>**6'+DejaVuSans'$/, 'unsubsetted font name';
 
 # unrandomize so that saved PDF doesn't change
-$font.font-name ~~ s/^<[A..Z]>**6/ABCDEF/;
+$font.font-name ~~ s/^<[A..Z]>**6'+'/ABCDEF+/;
 
-todo "font subsetting";
-is-deeply $font.encode("Abc♠♥♦♣b"), buf8.new(0,1, 0,2, 0,3, 0,4, 0,5, 0,6, 0,7, 0,2), 'encode (identity-h subset)';
-
-is-deeply $font1.encode("Abc♠♥♦♣b"), buf8.new(0,36, 0,69, 0,70, 15,56, 15,61, 15,62, 15,59, 0,69), 'encode (identity-h !subset)';
+is-deeply $font.encode("Abc♠♥♦♣b"), buf8.new(0,36, 0,69, 0,70, 15,56, 15,61, 15,62, 15,59, 0,69), 'encode (identity-h)';
 
 $gfx.text: -> $gfx {
     $gfx.font = $font, 10;
