@@ -1,5 +1,7 @@
 Release 0.4.1
    - Improved font descriptor encoding detection
+   - Add experimental font subsetting; disabled by default (may
+     change in a later release).
 
 Release 0.4.0
    - Fixed handling of CFF fonts
